--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </head>
 <body>
     <div class="canv out">
-        <div class="canv in">
+        <div class="canv in1">
+            <div class="cookie-jar">
             <img src="image/cookie.png" alt="cookie" class="cookie" id="cookie">
+            </div>
             <p class="counter" id="counter">0</p>
         </div>
+        <div class="canv in2"></div>
     </div>
     <script src="js/app.js"></script>
 </body>
