--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
             </div>
             <p class="counter" id="counter">0</p>
         </div>
-        <div class="canv in2"></div>
+        <div class="canv in2">
+            <img src="image/auto.png" class="click-auto" id="click-auto">
+            </div>
+        </div>
+    </div>
+    <div class="stats" id="stats">
+        <p>Auto clickers: 0</p>
+        <p>Price = 50</p>
     </div>
     <script src="js/app.js"></script>
 </body>
