--- a/index.html
+++ b/index.html
@@ -4,26 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Cookie Clicker</title>
 </head>
 <body>
-    <div class="canv out">
-        <div class="canv in1">
-            <div class="cookie-jar">
-            <img src="image/cookie.png" alt="cookie" class="cookie" id="cookie">
+    <div class="container-fluid" style="width: 18rem;">
+        <h1 style="text-align: center;">Cookie Clicker</h1>
+        <div class="card" style="width: 18rem; background-color: #151515;">
+                <div class="cookie-container">
+                    <img src="image/cookie.png" class="card-img-top" id="cookie">
+                </div>
+            <div class="card-body">
+                <div class="score-holder">
+                    <h1 class="points" id="points">0</h1>
+                </div>
+                <h5 class="card-title">Stats:</h5>
+                <p class="card-text" id="clickers">Clickers: 0</p>
+                <p class="card-text" id="clickers-price">Clickers price: 50</p>
+                <p class="card-text" id="grannies">Grannies: 0</p>
+                <p class="card-text" id="grannies-price">Grannies price: 500</p>
+                <a href="#" class="btn" id="clicker-btn">
+                    <img src="image/auto.png" alt="">
+                </a>
+                <a href="#" class="btn" id="grannie-btn">
+                    <img src="image/granny.png" alt="">
+                </a>
             </div>
-            <p class="counter" id="counter">0</p>
         </div>
-        <div class="canv in2">
-            <img src="image/auto.png" class="click-auto" id="click-auto">
-            </div>
-        </div>
-    </div>
-    <div class="stats" id="stats">
-        <p>Auto clickers: 0</p>
-        <p>Price = 50</p>
     </div>
     <script src="js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
