--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <img src="image/granny.png" alt="">
                 </a>
             </div>
+            <div class="card-footer">
+                <h5 id="cps">Cps: 0</h5>
+            </div>
         </div>
     </div>
     <script src="js/app.js"></script>
